Unify format of nickname button with language button, fix nickname button requiring second click issue, fix styling of the message div, fix header overflowing issue

--- a/pigeon/uni.css
+++ b/pigeon/uni.css
@@ -3,16 +3,15 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    justify-self: center;
     background-color: lightgray;
     border: 1px transparent;
     border-radius: .5vw;
     height: 10vh;
-    width: 100vw;
+    width: 99vw;
     position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 0 1vw; /* Add padding to ensure elements are spaced properly */
+    padding: 0 1vw;
+    box-sizing: border-box;
 }
 
 #ico-container {
@@ -61,15 +60,15 @@
     align-items: center;
     justify-content: center;
     height: 5vh;
-    padding: 0 2vh;
+    width: 5rem;
     background-color: rgb(73, 73, 73);
     border-radius: .5vh;
-    margin: 0 1vw;
-    cursor: pointer;
+    margin-right: 1vw;
 }
 
 #header-button:hover {
     background-color: rgb(110, 110, 110);
+    cursor: pointer;
 }
 
 #header-button p {
@@ -143,6 +142,7 @@
     position: absolute;
     bottom: 0.5vh;
     align-self: center;
+    justify-content: center;
 }
 
 #attachment {
@@ -161,12 +161,12 @@
 }
 
 #message {
-    height: 5vh;
-    width: 90vw;
+    height: 6vh;
+    width: calc(96.5vw - 7vh);
     border: 2px solid grey;
     border-radius: 2.5vh;
     overflow: hidden;
-    margin-left: 1vw;
+    margin-left: 0.5vw;
     padding-left: 1vw;
 }
 
